fix: drawer-images 없을 시 미노출로 불필요한 마진 삭제 / 이미지+텍스트 버튼 gap 수정

--- a/app/style/_button.sass
+++ b/app/style/_button.sass
@@ -74,7 +74,7 @@
   display: flex
   justify-content: center
   align-items: center
-  gap: 2px
+  gap: 8px
   border-radius: 8px
   @include body14M
   background-color: transparent
